Fixes margin and spacing between event elements
* Adds responsive styles to events
* Provides fixed margin around content

--- a/app/assets/stylesheets/patterns/_containers.scss
+++ b/app/assets/stylesheets/patterns/_containers.scss
@@ -3,5 +3,5 @@
 }
 
 .outer-container {
-  @include outer-container();
+  @include outer-container;
 }
