--- a/app/assets/stylesheets/patterns/_event.scss
+++ b/app/assets/stylesheets/patterns/_event.scss
@@ -1,7 +1,8 @@
 .event {
+  @include outer-container;
   background-color: white;
-  //border-bottom: 1px $light-gray solid;
-  margin-bottom: 1em;
+  border-bottom: 1px $light-gray solid;
+  margin: 0 1em 1em;
 }
 
 .event__edit-options {
@@ -17,18 +18,37 @@
 }
 
 .event__header__like {
-  @include span-columns(1 of 9);
+  @include span-columns(9 of 9);
   color: $light-gray;
   font-size: 1.5em;
-  float: right;
-  text-align: right;
+  width: 100%;
+
+  @include media($medium-screen) {
+    @include span-columns(3 of 9);
+    float: right;
+    margin-right: 0;
+    text-align: right;
+    width: auto;
+  }
+}
+
+.event__like__button {
+  width: 100%;
+
+  @include media($medium-screen) {
+    width: auto;
+  }
 }
 
 .event__header__title {
-  @include span-columns(8 of 9);
+  @include span-columns(9 of 9);
   font-size: 2em;
   font-weight: 300;
   margin-bottom: 1.25rem;
+
+  @include media($medium-screen) {
+    @include span-columns(6 of 9);
+  }
 
   a {
     color: #2f63b7;
@@ -43,32 +63,33 @@
 }
 
 .event__image {
-  @include span-columns(3);
+  @include span-columns(12);
   background-color: gray;
 
-  img {
-    display: block;
+  @include media($medium-screen) {
+    @include span-columns(4);
   }
+
 }
 
-.event__image {
-  @include span-columns(4);
-  background-color: gray;
-
-  img {
-    display: block;
-  }
+.event__image img {
+  display: block;
 }
 
 .event__info {
   @include span-columns(12);
-  padding: 0 2em 2em 0;
 }
 
 .event__image + .event__info {
-  @include span-columns(8);
-  @include omega();
-  padding: 2em;
+  @include span-columns(12);
+  margin-top: 1em;
+
+  @include media($medium-screen) {
+    @include span-columns(8);
+    @include omega();
+    margin-top: 0;
+    padding-left: 1em;
+  }
 }
 
 .event__info__date,
