--- a/app/assets/stylesheets/patterns/_helpers.scss
+++ b/app/assets/stylesheets/patterns/_helpers.scss
@@ -1,3 +1,7 @@
 .clearfix {
   @include clearfix();
 }
+
+.margin-auto {
+  margin: 0 auto;
+}
